Safari 16 cannot play WebM Opus from blob URL (breaks Construct 3) https://bugs.webkit.org/show_bug.cgi?id=245428 rdar://100205028

Reviewed by Youenn Fablet.

The Blob's content-type wasn't passed to the MediaPlayer preventing playback to succeed.
Similarly, when a Blob's URL was provided, an empty content-type was used.

We add a BlobRegistry::blobType method, which similar to blobSize will fetch the content-type
from the BlobData in the network process.

Added tests.

* LayoutTests/http/tests/media/video-src-mp4-blob-expected.txt: Added.
* LayoutTests/http/tests/media/video-src-mp4-blob.html: Added.
* LayoutTests/http/tests/media/video-src-webm-blob-expected.txt: Added.
* LayoutTests/http/tests/media/video-src-webm-blob.html: Added.
* LayoutTests/http/tests/media/video-srcobject-webm-blob-expected.txt: Added.
* LayoutTests/http/tests/media/video-srcobject-webm-blob.html: Added.
* LayoutTests/http/tests/media/white.webm: File was a mkv with a h264 video track. Re-encoded it to use a vp9 track instead.
* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/fileapi/ThreadableBlobRegistry.cpp:
(WebCore::ThreadableBlobRegistry::blobType):
* Source/WebCore/fileapi/ThreadableBlobRegistry.h:
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::loadResource):
* Source/WebCore/html/HTMLMediaElement.h:
* Source/WebCore/platform/network/BlobRegistry.h:
* Source/WebCore/platform/network/BlobRegistryImpl.cpp:
(WebCore::BlobRegistryImpl::blobType):
* Source/WebCore/platform/network/BlobRegistryImpl.h:
* Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::blobType):
* Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.h:
* Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.messages.in:
* Source/WebKit/NetworkProcess/NetworkProcessPlatformStrategies.cpp:
(WebKit::NetworkProcessPlatformStrategies::createBlobRegistry):
* Source/WebKit/WebProcess/FileAPI/BlobRegistryProxy.cpp:
(WebKit::BlobRegistryProxy::blobType):
* Source/WebKit/WebProcess/FileAPI/BlobRegistryProxy.h:
* Source/WebKitLegacy/mac/WebCoreSupport/WebPlatformStrategies.mm:

Canonical link: https://commits.webkit.org/276136@main